align correctly

--- a/src/UI/Layout/FlexRow/FlexRow.module.scss
+++ b/src/UI/Layout/FlexRow/FlexRow.module.scss
@@ -1,6 +1,8 @@
 .flexRow {
   display:flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 600px) {
